# Introduction-to-humanoid-roboitcs

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
objects/: rigid_box.kinbody.xml
objects/meshes/: rigid_box.stl
scripts/: dynamic_simulation.py  rigid_body_rotation_without_forces.py
src/introduction_to_humanoid_robotics/: __init__.py  display.py  dynamics.py
